--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "private": true,
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3"
+    "eslint": "^8",
+    "local-web-server": "^5.1.1"
+  },
+  "scripts": {
+    "serve": "npx ws -p 3000"
   }
 }
