--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
+  "name": "amanita",
+  "version": "0.1.0",
+  "description": "A magical web components framework enabling effortless communication via a pub/sub system, like a mycelium network for your components.",
+  "main": "src/a.js",
+  "module": "src/a.js",
+  "repository": {
+    "type": "git",
+	"url": "https://github.com/tisztamo/Amanita.js.git"
+  },
+  "keywords": [
+    "web-components",
+    "pub-sub",
+    "framework",
+    "mycelium",
+    "component-communication",
+    "workers",
+    "server-side"
+  ],
+  "author": "Krisztián SChäffer",
+  "license": "MIT",
   "private": false,
+  "files": [
+    "src/"
+  ],
+  "scripts": {
+    "serve": "npx ws -p 3000"
+  },
   "devDependencies": {
     "eslint": "^8",
     "local-web-server": "^5.1.1"
-  },
-  "scripts": {
-    "serve": "npx ws -p 3000"
   }
 }
+
