--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "src/a.js",
   "repository": {
     "type": "git",
-	"url": "https://github.com/tisztamo/Amanita.js.git"
+    "url": "https://github.com/tisztamo/Amanita.js.git"
   },
   "keywords": [
     "web-components",
@@ -23,6 +23,10 @@
   "files": [
     "src/"
   ],
+  "exports": {
+    ".": "./src/a.js",
+    "./stdlib": "./src/stdlib.js"
+  },
   "scripts": {
     "serve": "npx ws -p 3000"
   },
